<resources>
    <string name="app_name">Iridium</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_home">Home</string>
    <string name="action_my_orders">my orders</string>
    <string name="action_about">About</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_purchase">Purchase</string>
    <string name="action_apply">Apply</string>
    <string name="action_credit_card">Credit Card</string>
    <string name="action_bank_account">Bank Account</string>
    <string name="title_activity_login">Sign in</string>

    <string name="home_app_crd_card">Apply for Credit Card</string>
    <string name="home_app_bbk_acc">Apply for Bank Account</string>
    <string name="home_content1">\"We are here to serve you with the best credit card service. Get your credit card today.\"
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_first_statement">We provide best credit card service</string>
    <string name="about_second_statement">Enjoy unmatched privileges and offers customized for your
        lifestyle</string>

    <string name="purchase_products">Products</string>
    <string name="purchase_title">Purchase</string>
    <string name="purchase_Merchant">Merchant</string>
    <string name="purchase_payment_info">Payment Info</string>
    <string name="purchase_bank">Bank</string>
    <string name="purchase_card_number">Card Number</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_type">Card Type</string>
    <string name="purchase_expiry_date">Expiry Date (MM/YY)</string>
    <string name="purchase_cvv">CVV</string>
    <string name="purchase_card_pin">Card Pin</string>
    <string name="purchase_submit">Submit</string>
    <string name="reg_credit_card">Register Credit Card</string>

    <string name="purchase_wrist_watch">Wrist Watch (Rs. 2501.00)</string>
    <string name="purchase_perfume">Perfume (Rs. 1860.00) </string>
    <string name="purchase_shoe">Shoe (Rs. 3600.00) </string>
    <string name="purchase_bag">Bag (Rs. 3800.00) </string>
    <string name="purchase_frames">Frames (Rs. 800.00)</string>

    <string name="bank_acc_user_name">User Name</string>
    <string name= "bank_acc_branch">Branch</string>
    <string name= "bank_acc_city">City</string>
    <string name= "bank_acc_pincode">Pincode</string>
    <string name= "bank_acc_state">State</string>
    <string name= "bank_acc_balance">Balance</string>
    <string name="bank_acc_register">Register</string>
    <string name="loading_str">"wait.."</string>

    <string name="bank_acc_register_submit">Bank details registered. Thank you.</string>
    <string name="credit_card_form_submit">Credit card registered. Thank you.</string>
    <string name="purchase_submit_text">Purchase details Submitted. Thanks </string>

    <string-array name="planets_array">
        <item>HDFC</item>
        <item>ICIC</item>
        <item>Yes Bank</item>
        <item>Citi</item>
        <item>SBI</item>
        <item>Central Bank of India</item>
        <item>IDBI</item>
    </string-array>

</resources>
