<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/action_home" />

        <item
            android:id="@+id/nav_my_orders"
            android:title="@string/action_my_orders" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_purchase"
            android:title="@string/action_purchase" />
    </group>

    <item android:title="@string/action_apply">
        <menu>
            <item
                android:id="@+id/nav_bnk_accounts"
                android:title="@string/action_bank_account" />
            <item
                android:id="@+id/nav_crd_cards"
                android:title="@string/action_credit_card" />
        </menu>
    </item>

</menu>
