<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/action_home" />

        <item
            android:id="@+id/nav_gallery"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/action_login" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/action_purchase" />
    </group>

    <item android:title="@string/action_apply">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/action_bank_account" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/action_credit_card" />
        </menu>
    </item>

</menu>
