<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:openDrawer="start"
    tools:context=".AboutFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_font_size"
        android:layout_gravity="center"
        android:text="@string/purchase_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/purchase_products" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/purchase_padding"
        android:id="@+id/products_id">
            
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:checked="true"
            android:id="@+id/products_id1"
            android:text="@string/purchase_wrist_watch"/>
             
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/products_id2"
            android:text="@string/purchase_perfume"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/products_id3"
            android:text="@string/purchase_shoe"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/products_id4"
            android:text="@string/purchase_bag"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/products_id5"
            android:text="@string/purchase_perfume"/>

    </RadioGroup>
      

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/purchase_padding"
        android:textSize="@dimen/header_font_size"
        android:text="@string/purchase_payment_info"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/purchase_bank" />

    <Spinner
        android:id="@+id/credit_card_bank_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchase_card_number_layout"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/purchase_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/purchase_card_number_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/purchase_card_number"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_on_card_layout"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/purchase_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_on_card_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/name_on_card"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchase_expiry_date_layout"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/purchase_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/purchase_expiry_date_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/purchase_expiry_date"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchase_cvv_layout"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/purchase_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/purchase_cvv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/purchase_cvv"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchase_card_pin_layout"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/purchase_padding"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/purchase_card_pin_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/purchase_card_pin"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_submit"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:id="@+id/purchase_submit"
        android:layout_gravity="end" />

</LinearLayout>

</ScrollView>