<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:openDrawer="start"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/header_font_size"
            android:text="@string/reg_credit_card"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/purchase_card_number_layout"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/purchase_padding"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/purchase_card_number_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/purchase_card_number"
                android:textColorHighlight="#fff"
                android:textColorHint="#fff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_type_layout"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/purchase_padding"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/card_type_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/card_type"
                android:textColorHighlight="#fff"
                android:textColorHint="#fff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/purchase_expiry_date_layout"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/purchase_padding"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/purchase_expiry_date_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/purchase_expiry_date"
                android:textColorHighlight="#fff"
                android:textColorHint="#fff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/purchase_cvv_layout"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/purchase_padding"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/purchase_cvv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/purchase_cvv"
                android:textColorHighlight="#fff"
                android:textColorHint="#fff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/purchase_card_pin_layout"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/purchase_padding"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/purchase_card_pin_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/purchase_card_pin"
                android:textColorHighlight="#fff"
                android:textColorHint="#fff" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/purchase_bank" />

        <Spinner
            android:id="@+id/credit_card_bank_spinner"
            android:layout_width="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/credit_card_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:text="@string/purchase_submit"/>

    </LinearLayout>

</ScrollView>