<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iglulabs.medine.iridium.MainActivity"
    tools:showIn="@layout/app_bar_main">

   <ScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <LinearLayout
        android:id="@+id/home_content_block"
        android:layout_width="match_parent"
        android:background="@color/greyColor"
        android:layout_below="@+id/slider"
        android:layout_height="wrap_content">


        <TextView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_font_size"
            android:gravity="center"
            android:textColor="@color/home_content1_color"
            android:text= "@string/home_content1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/home_app_crd_block"
        android:layout_below="@+id/home_content_block"
        android:layout_height="wrap_content">


        <TextView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_font_size"
            android:gravity="center"
            android:id="@+id/home_app_bbk_acc_textView"
            android:textColor="@color/colorPrimary"
            android:text= "@string/home_app_bbk_acc"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/fourth1"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/home_app_crd_block"
        android:layout_height="wrap_content">


        <TextView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_font_size"
            android:gravity="center"
            android:id="@+id/home_app_crd_card_textview"
            android:textColor="@color/colorPrimary"
            android:text= "@string/home_app_crd_card"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/third1"
            />
    </LinearLayout>


</RelativeLayout>

</ScrollView>

<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/fragment"
    android:layout_height="match_parent">

</RelativeLayout>

</RelativeLayout>